@@ -9,6 +9,7 @@ Bug fixes:
 - Removed the debian directory of this product since this product will never be
   packaged on its own as a Debian package.
 - i18n: added missing translations for fr & en
+- Taking advantage of the new centralized CPSI18n.tests.translations module.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
